# axum-nextjs-app

backend/: Cargo.toml  main.rs
backend/crates/core/: main.rs
backend/route/: Cargo.toml
backend/route/src/: lib.rs
