workspace = { members = ["route"] }
[package]
name = "axum-next-app"
version = "0.1.0"
edition = "2021"
authors = ["SunsJay <sunsjay0806@gmail.com>"]
keywords = ["axum", "web", "database"]
license = "MIT"

[[bin]]
name = "axum-next-app"
path = "main.rs"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
route = { path = "route" }
tower = "0.4.13"
